--- a/Logave/Base.lproj/Main.storyboard
+++ b/Logave/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8173.3" systemVersion="15A279b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="GiB-Zv-qSf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="GiB-Zv-qSf">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8142"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
         <!--Authorization-->
@@ -401,7 +401,7 @@
                                                         <color key="titleColor" red="0.40000000000000002" green="0.45882352939999999" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
                                                     </state>
                                                     <connections>
-                                                        <segue destination="mWL-NJ-jSm" kind="show" id="uUE-i1-oFb"/>
+                                                        <action selector="touch:" destination="W3j-0l-79I" eventType="touchUpInside" id="knY-1e-o8n"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -1128,6 +1128,5 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="IYz-aa-iTB"/>
-        <segue reference="uUE-i1-oFb"/>
     </inferredMetricsTieBreakers>
 </document>
